# veda

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  watch-uv-sync.sh
apps/veda-cli/: README.md  pyproject.toml
apps/veda-cli/src/veda_cli/: __init__.py  commands.py  main.py
apps/veda-cli/tests/: test_cli_main.py
apps/veda-server/: README.md  pyproject.toml
apps/veda-server/src/veda_server/: __init__.py  main.py
apps/veda-server/tests/: test_server_main.py
libs/veda-core/: README.md  pyproject.toml
libs/veda-core/src/veda_core/: __init__.py
libs/veda-core/tests/: test_version.py
