[project]
name = "veda-cli"
version = "0.1.0"
description = "Veda command-line interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "click>=8.1",
  "veda-core",
]

[project.scripts]
veda = "veda_cli.main:main"

[tool.uv.sources]
veda-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
